Mon Jul 01 17:19:00 2002  Bill Haneman <bill.haneman@sun.com>

	* contrib/gdk-pixbuf-xlib/gdk-pixbuf-xlib-drawable.c
	(xlib_window_is_viewable):
	Fixed failure of assertion when drawable is root window.

Thu Jun 20 19:41:09 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdisplay.h gdk/gdkscreen.h gdk/**.c gtk/*.c
	tests/*.c: Renames:

	 gdk_get_default_display => gdk_display_get_default
	 gdk_get_default_screen  => gdk_screen_get_default
	 gdk_open_display        => gdk_display_open

Thu Jun 20 16:49:00 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdisplaymanager.[ch] gdk/gdk.[ch] gdk/gdkdisplay.c 
	gdk/gdkinternals.h gdk/x11/gdkdisplay-x11.c 
	gdk/win32/gdkdisplay-win32.c: Add a singleton object that
	we can use to get notification when displays 
	appear / disappear or the default display changes.

	gdk_set_default_display() => gdk_display_manager_set_default_display()
	gdk_list_displays() => gdk_display_manager_list_displays().
	(#85696)

	* gdk/Makefile.am gdk/gdkmarshalers.list: Add marshaler
	generation.

	* gdk/gdkintl.h: Add this.

	* gtk/gtkmain.c: Add gtk_parse_args() that initializes
	GTK+ without opening a display.

	* gtk/gtkmain.c: Set things up so if a module
	exports gtk_module_init() and gtk_module_display_init(), 
	then we treat it as multihead aware, otherwise, 
	we only initialize it after the default display is set.

Thu Jun 20 15:53:21 2002  Owen Taylor  <otaylor@redhat.com>

	Patch from Erwann Chenede.

	* gdk/x11/gdkdisplay-x11.[ch] gdk/x11/gdkprivate-x11.h:
	Introduce a yes/no/unknown GdkTristate, use it
	in a couple of places. (#79962)

	* gdk/x11/gdkwindow-x11.c gdk/x11/gdkdisplay-x11.h: Make 
	gravity_works per-display. (#79963)

Thu Jun 20 15:36:40 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkselection.c (gtk_selection_owner_set): Get
	the owner from the display if !NULL. Otherwise, warn for
	multihead. (#85680)

Thu Jun 20 15:17:14 2002  Owen Taylor  <otaylor@redhat.com>
