@@ -1,3 +1,11 @@
+Mon Jul  1 17:04:09 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gtk/gtkliststore.c (gtk_list_store_real_set_value): sync up
+	white space/variable names to match tree_store equiv.
+
+	* gtk/gtktreestore.c (gtk_tree_store_real_set_value): sort if we
+	set the value.
+
 Mon Jul 01 17:19:00 2002  Bill Haneman <bill.haneman@sun.com>
 
 	* contrib/gdk-pixbuf-xlib/gdk-pixbuf-xlib-drawable.c
